# hantracker

./: .gitignore  Cargo.toml  README.md  README.org  bacon.toml  build.rs  deps.edn  flake.nix  justfile  rust-toolchain.toml
lib/: Cargo.toml
lib/src/: derive_str.rs  lib.rs  load_kanjidic.rs
migrations/: 20250204172433_schema.sql
src/: common_cn_tier_1.txt  db.rs  hanmun_hanja_1800.txt  input.rs  main.rs  result.rs  takibi.txt  testing.rs  window.rs
src/wallpaper_tool/: core.clj
ui/: main.blp  main.css
