[workspace]
resolver = "2"
members = ["lib"]

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Christian Westrom <c.westrom@westrom.xyz>"]
description = "Tracks your progress learning Chinese characters"
repository = "TBD"
keywords = ["graphical"]
categories = []

[package]
name = "hantracker"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
log = "*"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
lib = { path = "lib" }
rand = "0.8.5"
relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_47"] }

[features]
default = []

[profile.dev]
incremental = true
