[workspace]
resolver = "2"
members = ["lib"]

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Christian Westrom <c.westrom@westrom.xyz>"]
repository = "https://github.com/wildwestrom/hantracker.git"
keywords = ["language", "study"]
version = "0.1.0"
categories = ["gui-application"]

[package]
name = "hantracker"
description = "Tracks your progress learning Chinese characters"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace.dependencies]
anyhow = "1"
log = "0"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
lib = { path = "lib" }
rand = "0.8.5"
relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_47"] }

[features]
default = []
gnome = []

[profile.dev]
incremental = true
