[workspace]
resolver = "2"
members = ["lib"]

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Christian Westrom <c.westrom@westrom.xyz>"]
repository = "https://github.com/wildwestrom/hantracker.git"
keywords = ["language", "study"]
version = "0.2.0"
categories = ["gui-application"]

[package]
name = "hantracker"
description = "Tracks your progress learning Chinese characters"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace.dependencies]
anyhow = "1"
tracing = "0"
tracing-subscriber = "0"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lib = { path = "lib" }
rand = "0.9.0"
relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_47"] }
directories = "6.0.0"
constcat = "0.6.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }

[features]
default = []
gnome = []

[profile.dev]
incremental = true

[profile.dev.package.sqlx-macros]
opt-level = 3
