[package]
name = "lib"
version = "0.1.0"
edition.workspace = true
description = "Backend of the Hantracker GUI"
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"
flate2 = "1"
hard-xml = "1"
