[package]
name = "lib"
description = "Backend of the Hantracker GUI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"
flate2 = "1"
hard-xml = "1"
